fix: Moved the room button to left. fix: ShortRest Button moves for better visibility (same as discard pile) fix: Room cards do not go out of the screen as they were previously.

--- a/web/app/src/App.css
+++ b/web/app/src/App.css
@@ -50,7 +50,6 @@ h1 {
 .buttonsDiv{
     display: flex;
     justify-content: flex-start;
-    margin-left: 25%;
 }
 
 .roomButton{
@@ -58,9 +57,11 @@ h1 {
     display: none;
 }
 
+.Room{
+    margin-left: 5%;
+}
+
 .Room img:hover{
-    /*width: 50%;*/
-    /*margin-left: 0%;*/
     transform: scale(var(--card-scale-on-zoom-size));
 }
 
